# rommiks_trading_platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0002_ohlcv_hypertable.py  1e3eb60714a3_initial_schema.py
docs/: ANALYSIS.md  COLLECTOR.md  PLAN.md  VPS_OPERATIONS.md
docs/modules/: ANALYZER.md  DELIVERY.md
n8n/: daily_digest.json  new_listing.json  signal_alert.json
scripts/: bootstrap.sh
src/: main.py
src/analyzer/: __main__.py  cli.py  engine.py  indicators.py  levels.py  mtf.py  signals.py
src/collector/: __main__.py  cli.py  exchange.py  ohlcv.py  storage.py  symbols.py  websocket.py
src/core/: __init__.py  config.py  database.py  logger.py  models.py  redis.py
src/delivery/: __main__.py  bot.py  cli.py  formatter.py  notifier.py
src/screener/: __main__.py  cli.py  listings.py  scheduler.py  screener.py
tests/unit/: test_analyzer.py  test_collector.py  test_config.py  test_delivery.py  test_models.py  test_screener.py
