[project]
name = "trading"
version = "0.1.0"
description = "AI-powered crypto trading recommendation system"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "uvloop>=0.19; sys_platform != 'win32'",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",

    # Exchange API
    "ccxt>=4.0",

    # Technical Analysis
    "pandas>=2.0",
    "numpy>=1.26",
    "ta>=0.11",

    # Telegram
    "python-telegram-bot>=21.0",

    # HTTP
    "httpx>=0.27",

    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
dashboard = [
    "textual>=0.70",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
